fix(web): all web modules now correctly support handling iframe context for the current page
Switching to an iframe and then performing interactions in the top-level browsing context (such as
taking a screenshot) no longer causes Serenity/JS to switch to top-level context for sub-sequent
interactions.

Related tickets: Closes #1310

--- a/integration/web-specs/static/screenplay/models/page-element/page_with_an_iframe.html
+++ b/integration/web-specs/static/screenplay/models/page-element/page_with_an_iframe.html
@@ -1,4 +1,7 @@
 <html lang="en">
+<head>
+    <title>Page with an iframe</title>
+</head>
 <body>
     <h1>Page with an iframe</h1>
     <iframe name="example-iframe" src="iframe.html" />
