--- a/integration/web-specs/static/screenplay/models/page-element/page_with_no_iframes.html
+++ b/integration/web-specs/static/screenplay/models/page-element/page_with_no_iframes.html
@@ -1,4 +1,7 @@
 <html lang="en">
+<head>
+    <title>Example page with no iframe</title>
+</head>
 <body>
     <h1>Example page with no iframe</h1>
 </body>
