--- a/integration/web-specs/static/screenplay/models/page-elements/locator_patterns.html
+++ b/integration/web-specs/static/screenplay/models/page-elements/locator_patterns.html
@@ -62,27 +62,17 @@
         </div>
     </section>
 
-<!--    <div class="container">-->
-<!--        <h1>First shopping list</h1>-->
-<!--        <ul>-->
-<!--            <li>coffee</li>-->
-<!--            <li>biscuits</li>-->
-<!--            <li>milk</li>-->
-<!--        </ul>-->
-<!--    </div>-->
-<!--    <div class="container">-->
-<!--        <h1>Second shopping list</h1>-->
-<!--        <ul>-->
-<!--            <li>cake</li>-->
-<!--            <li>coffee</li>-->
-<!--        </ul>-->
-<!--    </div>-->
-<!--    <div class="container">-->
-<!--        <h1>Third shopping list</h1>-->
-<!--        <ul>-->
-<!--            <li>apples</li>-->
-<!--            <li>oranges</li>-->
-<!--        </ul>-->
-<!--    </div>-->
+    <section data-test-id="mapping-tabular-data-to-object">
+        <ul class="container">
+            <li class="item">
+                <span class="name">apples</span>
+                <span class="price">£2.25</span>
+            </li>
+            <li class="item">
+                <span class="name">bananas</span>
+                <span class="price">£1.50</span>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
