feat(core): standardised arithmetic function APIs so that they can be used to map collection items
Related tickets: re #2420

--- a/integration/web-specs/static/screenplay/models/page-elements/locator_patterns.html
+++ b/integration/web-specs/static/screenplay/models/page-elements/locator_patterns.html
@@ -74,5 +74,20 @@
             </li>
         </ul>
     </section>
+
+    <section data-test-id="adding-numeric-values-across-table-cells">
+        <ul class="container">
+            <li class="item">
+                <span class="name">apples</span>
+                <span class="quantity">3</span>
+                <span class="price">£2.25</span>
+            </li>
+            <li class="item">
+                <span class="name">bananas</span>
+                <span class="quantity">2</span>
+                <span class="price">£1.50</span>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
