fix(core): added implementation examples to Numeric API docs

--- a/integration/web-specs/static/screenplay/models/page-elements/locator_patterns.html
+++ b/integration/web-specs/static/screenplay/models/page-elements/locator_patterns.html
@@ -76,11 +76,16 @@
     </section>
 
     <section data-test-id="adding-numeric-values-across-table-cells">
-        <ul class="container">
+        <ul id="price-list">
             <li class="item">
                 <span class="name">apples</span>
-                <span class="quantity">3</span>
+                <span class="quantity">5</span>
                 <span class="price">£2.25</span>
+            </li>
+            <li class="item">
+                <span class="name">apricots</span>
+                <span class="quantity">4</span>
+                <span class="price">£3.70</span>
             </li>
             <li class="item">
                 <span class="name">bananas</span>
