test(web): cleaned up html snippets in integration tests
added DOCTYPE to avoid the browser going into quirks mode

re #2575

--- a/integration/web-specs/static/screenplay/models/page-element/page_with_an_iframe.html
+++ b/integration/web-specs/static/screenplay/models/page-element/page_with_an_iframe.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Page with an iframe</title>
 </head>
 <body>
     <h1>Page with an iframe</h1>
-    <iframe name="example-iframe" src="iframe.html" />
+    <iframe name="example-iframe" src="iframe.html"></iframe>
 </body>
 </html>
