--- a/integration/web-specs/static/screenplay/models/page-element/page_with_a_nested_iframe.html
+++ b/integration/web-specs/static/screenplay/models/page-element/page_with_a_nested_iframe.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Page with a nested iframe</title>
 </head>
 <body>
     <h1>Page with a nested iframe</h1>
-    <iframe name="example-nested-iframe" src="page_with_an_iframe.html" />
+    <iframe name="example-nested-iframe" src="page_with_an_iframe.html"></iframe>
 </body>
 </html>
